[package]
name = "kubeseal-helper"
version = "2025.1.28"
edition = "2024"
# rust-version = "1.85"

[[bin]]
name = "ksher"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = { version = "*" }
clap = { version = "*", features = ["derive", "env"] }
passwords = { version = "*" }
base64-stream = { version = "*" }
